--- a/8.loop.ipynb
+++ b/8.loop.ipynb
@@ -721,8 +721,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "138be0b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0\n",
+      "7.5\n",
+      "9.1\n",
+      "6.3\n",
+      "6.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Printing the movie rating greater than 6\n",
+    "\n",
+    "movie_rating=[8.0,7.5,5.4,9.1,6.3,6.5,2.1,4.8,3.3]\n",
+    "\n",
+    "\n",
+    "for i in movie_rating:\n",
+    "    if i > 6:\n",
+    "        print(i)\n",
+    "    else:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "10ea31f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 8.0\n",
+      "2 7.5\n",
+      "3 9.1\n",
+      "4 6.3\n",
+      "5 6.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "index=0\n",
+    "for i in range(len(movie_rating)):\n",
+    "    if movie_rating[i]>=6:\n",
+    "        index+=1\n",
+    "        print(index,movie_rating[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d08a8955",
    "metadata": {},
    "outputs": [],
    "source": []
