--- a/12. Classes and Objects in Python.ipynb
+++ b/12. Classes and Objects in Python.ipynb
@@ -409,8 +409,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "79bcac11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class person(object):\n",
+    "    def __init__(self,first_name,last_name):\n",
+    "        self.first_name = first_name\n",
+    "        self.last_name = last_name\n",
+    "        \n",
+    "    def printname(self):\n",
+    "        print(f'You have entered: ',self.first_name,self.last_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bf3a8be7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Barbie\n"
+     ]
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    def __init__(self,firstname,lastname):\n",
+    "        self.firstname=firstname\n",
+    "        self.lastname=lastname\n",
+    "    def printname(self):\n",
+    "        print(self.firstname,self.lastname)\n",
+    "        \n",
+    "x = person('John','Barbie')\n",
+    "\n",
+    "x.printname()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "98586a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Name: Marry\n",
+      "Last Name: Gold\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Data:\n",
+    "    def __init__(self,firstname,lastname):\n",
+    "        self.firstname=firstname\n",
+    "        self.lastname=lastname\n",
+    "    def status(self):\n",
+    "        return True\n",
+    "    def Programming(self):\n",
+    "        return True\n",
+    "class Data_person(Data):\n",
+    "    pass\n",
+    "\n",
+    "x = Data_person('Marry','Gold')\n",
+    "\n",
+    "print('First Name:',x.firstname)\n",
+    "print('Last Name:',x.lastname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea931e5e",
+   "metadata": {},
+   "source": [
+    "#  Inheritance.\n",
+    "\n",
+    "\n",
+    " * Simple(single) Inheritance = Parent class and Child Class\n",
+    " \n",
+    " * Multi Level Inheritance = Parent Class/Child class ----Child Class\n",
+    " \n",
+    " * Multiple Inheritance = Parent class and parent class ----- Child class\n",
+    " \n",
+    " * Hierarchical Inheritance = Parent -------- Child class ------ Child."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "702ee7c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This function is parent class.\n",
+      "This function is child class.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Single Inheritance.\n",
+    "\n",
+    "class parent:\n",
+    "    def func1(self):\n",
+    "        print('This function is parent class.')\n",
+    "class Child(parent):\n",
+    "    def func2(self):\n",
+    "        print('This function is child class.')\n",
+    "        \n",
+    "object=Child()\n",
+    "object.func1()\n",
+    "object.func2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "01bc9c5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grandfather name: Rajveer\n",
+      "Father name:  Prince\n",
+      "Son_name:  Bob\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multilevel Inheritance\n",
+    "\n",
+    "class Grandfather:\n",
+    "    def __init__(self,grandfathername):\n",
+    "        self.grandfathername=grandfathername\n",
+    "        \n",
+    "# Intermediate class\n",
+    "\n",
+    "class Father(Grandfather):\n",
+    "    def __init__(self,fathername,grandfathername):\n",
+    "        self.fathername=fathername\n",
+    "        # involving constructor of grandfather class\n",
+    "        Grandfather.__init__(self,grandfathername)\n",
+    "        \n",
+    "class Son(Father):\n",
+    "    def __init__(self,sonname,fathername,grandfathername):\n",
+    "        self.sonname=sonname\n",
+    "        \n",
+    "        # involving constructor of father class\n",
+    "        Father.__init__(self,fathername,grandfathername)\n",
+    "    def print_name(self):\n",
+    "        print('Grandfather name:',self.grandfathername)\n",
+    "        print('Father name: ',self.fathername)\n",
+    "        print('Son_name: ',self.sonname)\n",
+    "s1=Son('Bob','Prince','Rajveer')\n",
+    "s1.print_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "29ef716a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fahter:  Ram\n",
+      "Mother: Sita\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multiple Inheritance\n",
+    "\n",
+    "# Base class1\n",
+    "class Mother:\n",
+    "    mothername=''\n",
+    "    def mother(self):\n",
+    "        print(self.mothername)\n",
+    "# Base class 2\n",
+    "class Father:\n",
+    "    fathername=''\n",
+    "    def father(self):\n",
+    "        print(self.fathername)\n",
+    "        \n",
+    "# Derived class\n",
+    "class son(Mother,Father):\n",
+    "    def parents(self):\n",
+    "        print('Fahter: ',self.fathername)\n",
+    "        print('Mother:',self.mothername)\n",
+    "        \n",
+    "s1=son()\n",
+    "s1.mothername='Sita'\n",
+    "s1.fathername='Ram'\n",
+    "s1.parents()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9551568b",
+   "metadata": {},
+   "source": [
+    "# Single Inheritance:- When child class is derived from only one parent class This is called single inheritance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "171089e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amazon is an Online Commerce store\n",
+      "Flipkart is a Online Store\n",
+      "olx is an Online Buy Sell Store\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Single inheritance.\n",
+    "\n",
+    "class Brands:            # parent class\n",
+    "    brand_name_1='Amazon'\n",
+    "    brand_name_2='Flipkart'\n",
+    "    brand_name_3='olx'\n",
+    "    \n",
+    "class products(Brands):   # Child class\n",
+    "    prod_1='Online Commerce store'\n",
+    "    prod_2='Online Store'\n",
+    "    prod_3='Online Buy Sell Store'\n",
+    "obj_1=products()   # Object Creation\n",
+    "\n",
+    "print(obj_1.brand_name_1+' is an',obj_1.prod_1)\n",
+    "print(obj_1.brand_name_2+' is a',obj_1.prod_2)\n",
+    "print(obj_1.brand_name_3+' is an',obj_1.prod_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7ed063b",
    "metadata": {},
    "outputs": [],
    "source": []
