--- a/12. Classes and Objects in Python.ipynb
+++ b/12. Classes and Objects in Python.ipynb
@@ -660,9 +660,240 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2ef40c6",
+   "metadata": {},
+   "source": [
+    "# Multiple Inheritance:- When child class is derived or inherited from more than one parent class. This is called multiple inheritance. In multiple inheritance, we have two parent class/base classes and one child class that inherits both parent classes properties."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7996e68d",
+   "metadata": {},
+   "source": [
+    " # Syntax of multiple inheritance\n",
+    " \n",
+    " class parent1\n",
+    " \n",
+    " pass\n",
+    " \n",
+    " class parent2\n",
+    " \n",
+    " pass\n",
+    " \n",
+    " class child(parent1/parent2)\n",
+    " \n",
+    " pass\n",
+    " \n",
+    " obj=child()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4be7a99b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amazon is an Online Commerce store its popularity is 100\n",
+      "Flipkart is an Online Store its popularity is 70\n",
+      "olx is an Online Buy Sell Store its popularity is 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Brands:            # parent class\n",
+    "    brand_name_1='Amazon'\n",
+    "    brand_name_2='Flipkart'\n",
+    "    brand_name_3='olx'\n",
+    "    \n",
+    "class products:   # parent class\n",
+    "    prod_1='Online Commerce store'\n",
+    "    prod_2='Online Store'\n",
+    "    prod_3='Online Buy Sell Store'\n",
+    "    \n",
+    "class popularity(Brands,products):   # Child class\n",
+    "    prod_1_popularity=' 100'\n",
+    "    prod_2_popularity=' 70'\n",
+    "    prod_3_popularity=' 60'\n",
+    "    \n",
+    "    \n",
+    "obj_1=popularity()\n",
+    "print(obj_1.brand_name_1+' is an '+obj_1.prod_1+' its popularity is'+obj_1.prod_1_popularity)\n",
+    "print(obj_1.brand_name_2+' is an '+obj_1.prod_2+' its popularity is'+obj_1.prod_2_popularity)\n",
+    "print(obj_1.brand_name_3+' is an '+obj_1.prod_3+' its popularity is'+obj_1.prod_3_popularity)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "327d22da",
+   "metadata": {},
+   "source": [
+    "# Multilevel Inheritance:- In Multilevel Inheritance, We have one parent class and child class that is derived or inherited from the parent class. When we have a grand- child class that is derived from the child class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bf4e12f",
+   "metadata": {},
+   "source": [
+    "Syntax of multilevel Inheritance\n",
+    "\n",
+    "\n",
+    "class A:    # parent class\n",
+    "\n",
+    "pass\n",
+    "\n",
+    "class B: # Chld class\n",
+    "\n",
+    "pass\n",
+    "\n",
+    "class C(B) # Grand child class\n",
+    "\n",
+    "pass\n",
+    "\n",
+    "obj=c()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0e0fa6ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amazon is an Online Commerce store its popularity is 100\n",
+      "Flipkart is an Online Store its popularity is 70\n",
+      "olx is an Online Buy Sell Store its popularity is 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Brands:            # parent class\n",
+    "    brand_name_1='Amazon'\n",
+    "    brand_name_2='Flipkart'\n",
+    "    brand_name_3='olx'\n",
+    "    \n",
+    "class products(Brands):   # Child class\n",
+    "    prod_1='Online Commerce store'\n",
+    "    prod_2='Online Store'\n",
+    "    prod_3='Online Buy Sell Store'\n",
+    "    \n",
+    "class popularity(products):   # grand Child class\n",
+    "    prod_1_popularity=' 100'\n",
+    "    prod_2_popularity=' 70'\n",
+    "    prod_3_popularity=' 60'\n",
+    "    \n",
+    "    \n",
+    "obj_1=popularity()\n",
+    "print(obj_1.brand_name_1+' is an '+obj_1.prod_1+' its popularity is'+obj_1.prod_1_popularity)\n",
+    "print(obj_1.brand_name_2+' is an '+obj_1.prod_2+' its popularity is'+obj_1.prod_2_popularity)\n",
+    "print(obj_1.brand_name_3+' is an '+obj_1.prod_3+' its popularity is'+obj_1.prod_3_popularity)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c34e57a4",
+   "metadata": {},
+   "source": [
+    "# Hierarchicla Inheritance:- When we derive or inherit more than one child class  from one (same) parent class. Then this type of inheritance is called hierarchical Inheritance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17b9994b",
+   "metadata": {},
+   "source": [
+    " # Syntax of herirachical Inheritance.\n",
+    " \n",
+    " \n",
+    " class A: # parent class\n",
+    " \n",
+    " pass\n",
+    " \n",
+    " class B(A): # Child class\n",
+    " \n",
+    " pass\n",
+    " \n",
+    " class C(A) # Child class\n",
+    " \n",
+    " pass\n",
+    " \n",
+    " class D(A) # Child class\n",
+    " \n",
+    " pass\n",
+    " \n",
+    " \n",
+    " obj_1=B()     #Object Creation.\n",
+    " \n",
+    " obj_1=C()\n",
+    " \n",
+    " obj_1=D()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "975c9059",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amazon is a Best Value\n",
+      "Amazon is a  Best Value\n",
+      "Amazon is an Online Commerce store and has a popularity of  100 and has  Best Value\n",
+      "Amazon is an Online Store and has a popularity of  70 and has  Better Value\n",
+      "Amazon is an Online Buy Sell Store and has a popularity of  60 and has  Good Value\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Brands:            # parent class\n",
+    "    brand_name_1='Amazon'\n",
+    "    brand_name_2='Flipkart'\n",
+    "    brand_name_3='olx'\n",
+    "    \n",
+    "class products(Brands):   # Child class\n",
+    "    prod_1='Online Commerce store'\n",
+    "    prod_2='Online Store'\n",
+    "    prod_3='Online Buy Sell Store'\n",
+    "    \n",
+    "class popularity(Brands):   # Child class\n",
+    "    prod_1_popularity=' 100'\n",
+    "    prod_2_popularity=' 70'\n",
+    "    prod_3_popularity=' 60'\n",
+    "\n",
+    "class value(Brands):    # child class\n",
+    "    prod_1_value=' Best Value'\n",
+    "    prod_2_value=' Better Value'\n",
+    "    prod_3_value=' Good Value'\n",
+    "    \n",
+    "obj_1=products()\n",
+    "obj_2=popularity()\n",
+    "obj_3=value()\n",
+    "\n",
+    "print(obj_3.brand_name_1+' is a'+obj_3.prod_1_value)\n",
+    "print(obj_3.brand_name_1+' is a '+obj_3.prod_1_value)\n",
+    "print(obj_2.brand_name_1+' is an '+obj_1.prod_1+' and has a popularity of '+obj_2.prod_1_popularity+' and has '+obj_3.prod_1_value)\n",
+    "print(obj_2.brand_name_1+' is an '+obj_1.prod_2+' and has a popularity of '+obj_2.prod_2_popularity+' and has '+obj_3.prod_2_value)\n",
+    "print(obj_2.brand_name_1+' is an '+obj_1.prod_3+' and has a popularity of '+obj_2.prod_3_popularity+' and has '+obj_3.prod_3_value)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ed063b",
+   "id": "1d14436f",
    "metadata": {},
    "outputs": [],
    "source": []
