--- a/12. Classes and Objects in Python.ipynb
+++ b/12. Classes and Objects in Python.ipynb
@@ -891,9 +891,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bcf9af60",
+   "metadata": {},
+   "source": [
+    "# 4 methods of OOPS concept in Real life.\n",
+    "\n",
+    "\n",
+    "1. Inheritance.  \n",
+    "2. Polymorphism\n",
+    "3. Encapsulation\n",
+    "4. Abastraction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cda1f3b",
+   "metadata": {},
+   "source": [
+    "# Mom and Daugther.\n",
+    "# 1. Inheritance.\n",
+    "\n",
+    "* Some properties of mom inherits by her daughter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8694a29",
+   "metadata": {},
+   "source": [
+    "# 2. Polymorphism\n",
+    "\n",
+    "* Ex- In school behave like a student. In home behave like a son. In bus behave like a passenger. In shopping mall behave like a customer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2235b16",
+   "metadata": {},
+   "source": [
+    "# 3. Encapsulation\n",
+    "\n",
+    "Ex- School bag can keep our book, pen, eraser, sharpner so on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41a5f76f",
+   "metadata": {},
+   "source": [
+    "# 4. Abstraction:-\n",
+    "\n",
+    "Ex- ATM:- Check Balance, Withdraw cash, Deposite Cash, Print bill"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddfd609a",
+   "metadata": {},
+   "source": [
+    "# Object-oriented programming\n",
+    "\n",
+    "* Object -----------> Instance of Class.\n",
+    "* Class-------------> Blueprint of Object.\n",
+    "* Encapulation -----> Protecting our Data.\n",
+    "* Polymorphism------> Different behaviours of difference instances.\n",
+    "* Abstraction-------> Hiding our irrelevant Data.\n",
+    "* Inheritence ------> One property of object is acquiring to another property of object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d14436f",
+   "id": "10969eb6",
    "metadata": {},
    "outputs": [],
    "source": []
