--- a/oops_practice.ipynb
+++ b/oops_practice.ipynb
@@ -126,8 +126,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "7eb9a617",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The color of the car is:  <bound method Vehicle.color of <__main__.Vehicle object at 0x000002F6EF3FBF70>>\n",
+      "The name of the car is:  School Bus Volvo\n",
+      "The speed of the car is:  180\n",
+      "The mileage of the car is:  12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a property that must have same value for every class instance(object).\n",
+    "# Define a class attribute \"color\" with a default value white. i.e Every vehicle should be white.\n",
+    "# color: white, vehicle name: School volvo, speed: 180, mileage: 12\n",
+    "# coldor: white, vehicle name: Audi Q5, speed:240, meleage:10\n",
+    "\n",
+    "class Vehicle:\n",
+    "    def __init__(self,name,speed,mileage):\n",
+    "        self.name = name\n",
+    "        self.speed = speed\n",
+    "        self.mileage = mileage\n",
+    "        \n",
+    "    def color(self,color=\"White\"):\n",
+    "        return super().color(color='white')\n",
+    "    \n",
+    "    def print_vehicle(self):\n",
+    "        print('The color of the car is: ',self.color)\n",
+    "        print('The name of the car is: ',self.name)\n",
+    "        print('The speed of the car is: ',self.speed)\n",
+    "        print('The mileage of the car is: ',self.mileage)\n",
+    "    \n",
+    "        \n",
+    "#obj_1 = Vehicle('School Bus Volvo',180,12)\n",
+    "obj_1.print_vehicle()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7a3d1df3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color: White Name: School_Volvo Speed: 180 Mileage: 12\n",
+      "color: White Name: Audi Q5 Speed: 240 Mileage: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "class vehicle:\n",
+    "    color='White'\n",
+    "    \n",
+    "    def __init__(self,name,max_speed,mileage):\n",
+    "        self.name=name\n",
+    "        self.max_speed=max_speed\n",
+    "        self.mileage=mileage\n",
+    "        \n",
+    "        \n",
+    "class Bus(vehicle):\n",
+    "    pass\n",
+    "class Car(vehicle):\n",
+    "    pass\n",
+    "\n",
+    "    \n",
+    "school_bus=Bus('School_Volvo',180,12)\n",
+    "print(\"color:\",school_bus.color,\"Name:\",school_bus.name,\"Speed:\",school_bus.max_speed,'Mileage:',school_bus.mileage)\n",
+    "\n",
+    "car= Car('Audi Q5',240,10)\n",
+    "print(\"color:\",car.color,\"Name:\",car.name,\"Speed:\",car.max_speed,\"Mileage:\",car.mileage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7e06967c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Bus fare is: 5500.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a Bus child class that inherits from the Vehicle class. \n",
+    "# The default fare charge of any vehicle is seating capacity * 100. \n",
+    "# If Vehicle is Bus instance, we need to add an extra 10% on full fare as a maintenance charge. \n",
+    "# So total fare for bus instance will become the final amount = total fare + 10% of the total fare.\n",
+    "# Note: The bus seating capacity is 50. so the final fare amount should be 5500. You need to override \n",
+    "# the fare() method of a Vehicle class in Bus class.\n",
+    "# output:Total Bus fare is: 5500.0\n",
+    "\n",
+    "\n",
+    "# amout=super().fare()\n",
+    "# amount+=amout*10/100\n",
+    "# return amount\n",
+    "\n",
+    "class vehicle: \n",
+    "    def __init__(self,name,max_speed,mileage,capacity):\n",
+    "        self.name=name\n",
+    "        self.max_speed=max_speed\n",
+    "        self.mileage=mileage\n",
+    "        self.capacity=capacity\n",
+    "        \n",
+    "    def fare(self):\n",
+    "        return self.capacity*100\n",
+    "    \n",
+    "class Bus(vehicle):\n",
+    "    def fare(self):\n",
+    "        amount= super().fare()\n",
+    "        amount+=amount*10/100\n",
+    "        return amount\n",
+    "    \n",
+    "School_bus=Bus('School_Volvo',12,80,50)\n",
+    "print('Total Bus fare is:',School_bus.fare())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "014cfa70",
    "metadata": {},
    "outputs": [],
    "source": []
